samples/_failures_safe/1761444052_ed607f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38be2852.c: In function ‘main’:
./samples/SAFE/__tmp_38be2852.c:137:9: error: expected declaration or statement at end of input
  137 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_38be2852.c:137:9: error: expected declaration or statement at end of input
